--- a/index.html
+++ b/index.html
@@ -10,5 +10,8 @@
   <body class="min-h-screen bg-gray-100">
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <section>
+      Todos los deremchos resermados.
+    </section>
   </body>
 </html>
